dropping the fixed width commenter name from the widget since it usually leaves too much space (and reads much better without that space)

--- a/coreapp/public/stylesheets/widget.css
+++ b/coreapp/public/stylesheets/widget.css
@@ -202,7 +202,6 @@ version: 3.0.0pr2
   font-weight: bold;
   float: left;
   margin-right: 10px;
-  width: 17em;
 }
 
 #outspokes #comment_list .cmt_date {
